Adjust News and Events sections properly with media queries and css tricks. Fix newscard overflow

--- a/src/components/Cards/NewsCard.module.scss
+++ b/src/components/Cards/NewsCard.module.scss
@@ -19,42 +19,33 @@
     transform: translate(0px, -2px);
     outline: 0;
   }
-}
-
-.card-body {
-  display: flex;
-  overflow: hidden;
-  height: 180px;
-  padding-right: 16px;
-  padding-bottom: 0px;
-  padding-left: 16px;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  grid-row-gap: 8px;
-}
-
-.date {
-  color: #555;
-  font-size: 10px;
-  line-height: 10px;
-  font-weight: 700;
-}
-
-.title {
-  color: #000;
-  font-size: 18px;
-  line-height: 150%;
-  font-weight: 700;
-  letter-spacing: 0px;
-}
-
-.content {
-  color: #000;
-  font-weight: 400;
-  width: 240px;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  align-self: flex-start;
+  .card-body {
+    display: flex;
+    overflow: hidden;
+    height: 180px;
+    padding-right: 16px;
+    padding-bottom: 0px;
+    padding-left: 16px;
+    flex-direction: column;
+    grid-row-gap: 8px;
+    white-space: break-spaces;
+    .date {
+      color: #555;
+      font-size: 10px;
+      line-height: 10px;
+      font-weight: 700;
+    }
+    .title {
+      color: #000;
+      font-size: 18px;
+      line-height: 150%;
+      font-weight: 700;
+      letter-spacing: 0px;
+    }
+    .content {
+      color: #000;
+      font-weight: 400;
+      width: 240px;
+    }
+  }
 }
