--- a/src/sections/NewsAndEvents.module.scss
+++ b/src/sections/NewsAndEvents.module.scss
@@ -13,88 +13,80 @@
   align-content: stretch;
   grid-column-gap: 40px;
   grid-row-gap: 40px;
-}
 
-.container {
-  display: flex;
-  gap: 2rem;
-  margin: auto;
-  padding: 0 1rem;
-}
-
-.news {
-  display: block;
-  max-width: 836px;
-}
-
-.news-cards {
-  display: flex;
-  overflow-x: auto;
-  gap: 1rem;
-  padding-bottom: 1rem;
-}
-
-.events {
-  display: block;
-  max-width: 838px;
-  width: 100%;
-}
-
-.events-list {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.event-list-item {
-  display: flex;
-  padding-bottom: 1rem;
-  flex-direction: column;
-  grid-row-gap: 4px;
-  border-bottom: 1px solid #b5b5b5;
-  margin: 0;
-}
-
-.event-date {
-  font-size: 10px;
-  line-height: 12px;
-  font-weight: 700;
-  color: #333;
-}
-
-.event-link {
-  text-decoration: none;
-  color: #333;
-  &:hover {
-    text-decoration: underline;
-    color: #000;
-  }
-}
-
-.btn-group {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: stretch;
-  align-self: stretch;
-  grid-column-gap: 16px;
-  gap: 1rem;
-}
-
-.btn {
-  height: 45px;
-  max-width: 352px;
-  min-width: 352px;
-  flex: 1;
-  font-size: 1rem;
-}
-
-@media screen and (max-width: 910px) {
-}
-
-@media screen and (max-width: 1024px) {
   .container {
-    flex-direction: column;
+    display: flex;
+    gap: 2rem;
+    margin: auto;
+    @media screen and (max-width: 769px) {
+      flex-direction: column;
+    }
+    @media screen and (max-width: 1251px) {
+      padding: 0 1rem;
+    }
+    .news {
+      flex: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      display: block;
+      max-width: 836px;
+      .news-cards {
+        display: flex;
+        overflow: auto;
+        gap: 1rem;
+        padding-bottom: 1rem;
+      }
+    }
+    .events {
+      display: block;
+      max-width: 384px;
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      @media screen and (max-width: 769px) {
+        max-width: 100%;
+      }
+      .events-list {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-bottom: 50px;
+        .event-list-item {
+          display: flex;
+          padding-bottom: 1rem;
+          flex-direction: column;
+          grid-row-gap: 4px;
+          border-bottom: 1px solid #b5b5b5;
+          margin: 0;
+          .event-date {
+            font-size: 10px;
+            line-height: 12px;
+            font-weight: 700;
+            color: #333;
+          }
+          .event-link {
+            text-decoration: none;
+            color: #333;
+            &:hover {
+              text-decoration: underline;
+              color: #000;
+            }
+          }
+        }
+      }
+      .btn-group {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        grid-column-gap: 16px;
+        gap: 1rem;
+        .btn {
+          height: 45px;
+          flex: 1;
+          font-size: 1rem;
+        }
+      }
+    }
   }
 }
